Con RFID y todas las librerias actualizadas a ultima version en project.clj ojo RFID alfa